--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,18 @@
 server:
-  port: 8008
+  port: 8003
 spring:
   writedb:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    jdbc-url: jdbc:mysql://yjhome.kro.kr:3306/schedule?usessl=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    jdbc-url: jdbc:mysql://gutsandgun.kro.kr:12008/scheduler?usessl=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
-    password: qwer1234!
+    password: gutsandgun
     hikari:
       maximum-pool-size: 10
   readdb:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    jdbc-url: jdbc:mysql://yjhome.kro.kr:3306/read?usessl=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    jdbc-url: jdbc:mysql://gutsandgun.kro.kr:12002/read?usessl=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
-    password: qwer1234!
+    password: gutsandgun
     hikari:
       maximum-pool-size: 10
   jpa:
@@ -41,3 +41,9 @@ logging:
         type:
           descriptor:
             sql: trace # query의 ?에 어떤 값이 들어가는지 TRACE Log에 값을 보여줌
+
+
+feign:
+  url :
+    sending-manager : localhost:8004
+    sending-scheduler : localhost:8003
