--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,22 @@
 server:
   port: 8003
 spring:
+#  #  임시 db
+#  readdb:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    jdbc-url: jdbc:mysql://yjhome.kro.kr:3306/read?usessl=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#    username: root
+#    password: qwer1234!
+#    hikari:
+#      maximum-pool-size: 10
+#  writedb:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    jdbc-url: jdbc:mysql://yjhome.kro.kr:3306/scheduler?usessl=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+#    username: root
+#    password: qwer1234!
+#    hikari:
+#      maximum-pool-size: 10
+
   writedb:
     driver-class-name: com.mysql.cj.jdbc.Driver
     jdbc-url: jdbc:mysql://gutsandgun.kro.kr:12008/scheduler?usessl=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
