--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,8 +26,7 @@ spring:
       maximum-pool-size: 10
   readdb:
     driver-class-name: com.mysql.cj.jdbc.Driver
-#    jdbc-url: jdbc:mysql://gutsandgun.kro.kr:12002/read?usessl=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    jdbc-url: jdbc:mysql://gutsandgun.kro.kr:12010/read?usessl=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    jdbc-url: jdbc:mysql://gutsandgun.kro.kr:12002/read?usessl=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 
     username: root
     password: gutsandgun
@@ -36,7 +35,7 @@ spring:
   jpa:
     generate-ddl: true
     open-in-view: false
-    show-sql: true
+#    show-sql: true
     hibernate:
       ddl-auto: update  # option type: create, create-drop, update, validate, none
       naming:
@@ -47,7 +46,7 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
         storage_engine: innodb
         format_sql: true
-        show_sql: true
+#        show_sql: true
 
 
 
@@ -62,6 +61,6 @@ logging:
 
 
 feign:
-  url :
+  url:
     sending-manager : localhost:8004
     sending-scheduler : localhost:8003
